--- a/src/bulma.scss
+++ b/src/bulma.scss
@@ -19,7 +19,7 @@ $navbar-bottom-box-shadow-size: 0 -2px 0 0;
 
 $menu-item-hover-background-color: #fafafa;
 $menu-label-color: $off-tomato;
-
+$button-color: $grey-dark;
 // $body-size: 18px;
 $body-line-height: 1.75;
 
