--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,15 @@
 a {
+    color: #212529;
+}
+
+a:hover {
     text-decoration: none;
+    color: inherit
+}
+
+hr {
+    border-top: 1px solid whitesmoke;
+    margin: 1.75rem 0 !important;
 }
 
 // button {
