--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,10 @@ a:hover {
 hr {
     border-top: 1px solid whitesmoke;
 }
+
+blockquote {
+    border-color: #ff8d79;
+    margin: 2rem 0;
+    padding: 1rem 1.5rem;
+    line-height: 1.75rem;
+}
