--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,12 +16,16 @@ hr {
 
 .navbar {
     display: flex;
+    padding: 1rem 0;
+    margin-bottom: 3rem;
     flex-flow: row nowrap;
     justify-content: space-evenly;
-    margin: 1rem 0 2rem 0;
+    align-items: center;
+    border-bottom: 1px solid black;
 
     a {
-        border-bottom: 1px solid #666;
+        height: 1.5rem;
+        line-height: 1.5rem;
     }
 }
 
@@ -35,7 +39,7 @@ hr {
         min-width: 300px;
 
         .latest-posts-header {
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
 
             .icon {
                 margin-right: 1rem;
@@ -52,6 +56,7 @@ hr {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    align-items: center;
 }
 
 .date {
@@ -68,5 +73,29 @@ hr {
 
     h1 {
         margin-top: 0;
+    }
+
+    .gatsby-image-outer-wrapper {
+        margin: 2rem 0;
+    }
+}
+
+.footer {
+    display: flex;
+    padding: 1rem 0;
+    margin-top: 3rem;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid black;
+
+    a {
+        margin-right: 1rem;
+        height: 1.5rem;
+    }
+
+    p {
+        margin: 0;
+        line-height: 1.5rem;
     }
 }
