--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+$divider-color: #ddd;
+
 * {
     background-color: #fafafa;
 }
@@ -12,7 +14,7 @@ p {
 }
 
 hr {
-    background-color: #999;
+    background-color: $divider-color;
 }
 
 .site-wrapper {
@@ -29,7 +31,7 @@ hr {
     flex-flow: row nowrap;
     justify-content: space-evenly;
     align-items: center;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid $divider-color;
 
     a {
         height: 1.5rem;
@@ -158,8 +160,8 @@ hr {
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
-        border-top: 1px solid #999;
-        border-bottom: 1px solid #999;
+        border-top: 1px solid $divider-color;
+        border-bottom: 1px solid $divider-color;
         padding-top: 2rem;
         padding-bottom: 2rem;
         margin-bottom: 2.5rem;
@@ -186,7 +188,7 @@ hr {
 
         .divider {
             width: 1px;
-            background-color: #999;
+            background-color: $divider-color;
             margin: 0 2rem;
         }
     }
@@ -225,7 +227,7 @@ hr {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    border-top: 1px solid #999;
+    border-top: 1px solid $divider-color;
 
     a {
         font-size: 16px;
