--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ a {
 .navbar {
     display: flex;
     padding: 1rem 0;
-    margin-bottom: 3rem;
+    margin-bottom: 1.5rem;
     flex-flow: row nowrap;
     justify-content: space-evenly;
     align-items: center;
@@ -61,12 +61,14 @@ a {
 
 .sidebar-main {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-evenly;
 
     .sidebar {
-        width: 300px;
-        min-width: 300px;
+        order: 2;
+        display: flex;
+        flex: 1 250px;
+        margin: 1.5rem;
 
         hr {
             margin: 2rem 0;
@@ -121,7 +123,9 @@ a {
     }
 
     .main {
-        max-width: 650px;
+        display: flex;
+        flex: 2 500px;
+        margin: 1.5rem;
     }
 }
 
@@ -198,7 +202,7 @@ a {
         display: flex;
         flex-flow: row nowrap;
         justify-content: flex-end;
-        margin-top: 0.5rem;
+        // margin-top: 0.5rem;
 
         &.center {
             justify-content: center;
@@ -278,7 +282,7 @@ a {
         }
     }
 
-    .detailed-prev-next {
+    .prev-next {
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
@@ -319,7 +323,7 @@ a {
         }
     }
 
-    .prev-next {
+    .bottom-nav {
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
@@ -340,6 +344,7 @@ a {
 
                 a, i, span {
                     color: $green-mid;
+                    background-color: $button-bg-grey;
                 }
             }
 
